refactor: .collect() -> .toList()